places and routes changes, plannings_small fixed

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -18,7 +18,7 @@
     <%#= place_timeline_thumb(@place) %>
         <div class="PRG_information">
           <div class="btn-add"></div>
-          <div class="title_prg">
+          <div class="title_prg title_place">
             <p class="titlecentral"><%= @place.title %></p>
           </div>
             <div class="prg_stars">
@@ -48,10 +48,8 @@
         <ul>
           <li><%= image_tag('panoramica_toledo.jpg') %></li>
           <li><%= image_tag('panoramica_toledo.jpg') %></li>
-          <li><%= image_tag('panoramica_toledo.jpg') %></li>
         </ul>
         <ul>
-          <li><%= image_tag('panoramica_toledo.jpg') %></li>
           <li><%= image_tag('panoramica_toledo.jpg') %></li>
           <li><%= image_tag('panoramica_toledo.jpg') %></li>
         </ul>
