--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -3,7 +3,7 @@
 		<%= render :partial => "trips/info" %>
 	</div>
 
-	<div id="planning_trip">
+	<div id="prg_trips">
 		<h4><%= link_to t('planning.planning') %></h4>
 		<ul class="thumbnails">
 			<%= render :partial => "plannings/item_small" %>
