--- a/app/assets/stylesheets/city/binakuru/places.css.sass
+++ b/app/assets/stylesheets/city/binakuru/places.css.sass
@@ -80,7 +80,13 @@
       padding-right: 10px
       padding-left: 32px
       padding-bottom: 10px
-
+    .title_route
+      p
+        font-size: 44px
+        padding-top: 17px
+    .title_place
+      p 
+        padding-top: 50px
     .title_prg
       background-color: #0DA592
       border-radius: 100px 100px 100px 100px
@@ -91,9 +97,9 @@
       text-align: center
       line-height: 50px
       width: 200px
-      p
-        padding-top: 50px
-        @include cityName
+      @include cityName
+
+        
 .PRG_description
   width: 68%
   background-color: white
@@ -133,11 +139,13 @@
     height: auto
     width: 100%
   .related_photos
-    padding-top: 10px
-    padding-bottom: 10px
+    padding-bottom: 13px
     ul 
+      margin-left: 10%
       li 
         display: inline-block
+        margin-right: 8%
+        margin-top: 6%
         img
           max-width: 100px
           height: auto
@@ -148,3 +156,10 @@
   text-align: center
   a 
     @include mapMode
+#prg_routes
+  height: 100px
+  width: 100%
+  ul.thumbnails
+    li
+      display: inline-block
+
