--- a/app/assets/stylesheets/city/binakuru/plannings.css.sass
+++ b/app/assets/stylesheets/city/binakuru/plannings.css.sass
@@ -80,3 +80,25 @@
       margin-top: 5px
       @include diaryGuideName 
       text-align: center
+
+
+#prg_small
+  @include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth) 
+  h4
+    text-align: center
+  ul
+    margin-left: auto
+    margin-right: auto
+    display: block
+
+    li
+      margin-left: 13px
+      width: 85px
+      img 
+        width: 100%
+        height: 85px
+    li:first-child
+      margin-left: 0px
+      img 
+        width: 100%
+        height: 85px
