--- a/app/assets/stylesheets/city/binakuru/plannings.css.sass
+++ b/app/assets/stylesheets/city/binakuru/plannings.css.sass
@@ -82,7 +82,8 @@
       text-align: center
 
 
-#prg_small
+#prg_small,
+#prg_trips
   @include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth) 
   h4
     text-align: center
