calendar and prg changes

--- a/app/assets/stylesheets/city/binakuru/places.css.sass
+++ b/app/assets/stylesheets/city/binakuru/places.css.sass
@@ -150,6 +150,19 @@
           max-width: 100px
           height: auto
           opacity: 0.8
+  .related_events
+    padding-bottom: 2%
+    padding-top: 2%
+    table 
+      background-color: transparent
+      border-collapse: collapse
+      border-spacing: 0
+      height: 200px
+      margin-left: 9%
+      width: 87%
+    .highlight_events
+      
+       
 
 .change_mode
   width: 71%
