--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -42,7 +42,9 @@
     <div class="change_mode"><a href="">map mode</a></div>
     <div class="related">
       <p>related events</p>
-      <div class="related_events related_all"></div>
+      <div class="related_events related_all">
+        <%= render :partial => 'routes/calendar' %>
+      </div>
       <p>related photos</p>
       <div class="related_photos related_all">
         <ul>
