--- a/app/views/routes/_item.html.erb
+++ b/app/views/routes/_item.html.erb
@@ -1,5 +1,5 @@
 <%= div_for(route, :class =>"item-object minimized ui-corner-all") do %>
-  <div class="picture">
+  <!-- <div class="picture">
     <%= link_to thumb_for(route.main_picture, '540x220'), route %>
     <div class="actions">
       <a href="#" class="button-resizable" class="ui-state-default ui-corner-all"></a>
@@ -19,5 +19,36 @@
     <p class="info-item">
       Because you listened to Tupac, 2Pac, Snoop Dogg, The Notorious B.I.G., and Young JeezyBecause you listened to Tupac, 2Pac, Snoop Dogg, The Notorious B.I.G., and Young JeezyDogg, The Notorious B.I.G., and Young Jee
     </p>
-  </div>
+  </div> -->
+  <li class="" rel="tooltip" title="name" data-original-title="Hi">
+  <%= image_tag('panoramica_toledo.jpg') %>
+</li>
+<li class="">
+  <%= image_tag('panoramica_toledo.jpg') %>
+</li>
+<li class="">
+  <%= image_tag('panoramica_toledo.jpg') %>
+</li>
+<li class="">
+  <%= image_tag('panoramica_toledo.jpg') %>
+</li>
+<li class="">
+  <%= image_tag('panoramica_toledo.jpg') %>
+</li>
+<li class="">
+  <%= image_tag('panoramica_toledo.jpg') %>
+</li>
+<li class="">
+  <%= image_tag('panoramica_toledo.jpg') %>
+</li>
+<li class="">
+  <%= image_tag('panoramica_toledo.jpg') %>
+</li>
+<li class="">
+  <%= image_tag('panoramica_toledo.jpg') %>
+</li>
+<li class="">
+  <%= image_tag('panoramica_toledo.jpg') %>
+</li>
+
 <% end %>
