--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -32,7 +32,7 @@
               </ul> 
             </div>
         <div>  
-          <!--  <%= render :partial => "routes/info" %> -->
+     <!--      <%= render :partial => "routes/info" %> -->
         <% unless @route.description.blank? %>
             <h3><%= t('route.info.description.description') %></h3>
           <% end %>
@@ -47,7 +47,7 @@
 
 <div id="prg_small">
     <ul class="thumbnails">
-      <%= render :partial => "routes/item2" %>
+      <%= render :partial => "routes/item2", :locals => {:route => @route} %>
     </ul>
 </div>
 
@@ -62,10 +62,8 @@
         <ul>
           <li><%= image_tag('panoramica_toledo.jpg') %></li>
           <li><%= image_tag('panoramica_toledo.jpg') %></li>
-          <li><%= image_tag('panoramica_toledo.jpg') %></li>
         </ul>
         <ul>
-          <li><%= image_tag('panoramica_toledo.jpg') %></li>
           <li><%= image_tag('panoramica_toledo.jpg') %></li>
           <li><%= image_tag('panoramica_toledo.jpg') %></li>
         </ul>
