--- a/app/views/layouts/_header_signed_in.erb
+++ b/app/views/layouts/_header_signed_in.erb
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
       </button>
       <%= link_to(image_tag('barco_blanco.png', :alt => t('site.name')), root_path, class: 'logo') %>
-      <a href="/home "class="brand">binakuru</a>
+      <a href="/" class="brand">binakuru</a>
       
       
       <div class="nav-collapse collapse">
