Fix photo sizes

--- a/app/views/guides/_info.html.erb
+++ b/app/views/guides/_info.html.erb
@@ -2,7 +2,7 @@
   <h4>This is a guide from <%= @guide.trip.title %> trip</h4>
   <div class="info">
     <div class="cover">
-      <%= thumb_for(@guide.main_picture, '540x220') %>
+      <%= thumb_for(@guide.main_picture, '500') %>
     </div>
       <p>The old city is located on a mountaintop with a 150 degree view, surrounded on three sides by a bend in the Tagus River, and contains many historical sites, including the Alcázar, the cathedral (the primate church of Spain), and the Zocodover, a central market place.</p>
       <p>The Cathedral of Toledo (Catedral de Toledo) was built between 1226–1493 and modeled after the Bourges Cathedral, though it also combines some characteristics of the Mudéjar style. It is remarkable for its incorporation of light and features the Baroque altar called El Transparente, several stories high, with fantastic figures of stucco, paintings, bronze castings, and multiple colors of marble, a masterpiece of medieval mixed media by Narciso Tomé topped by the daily effect for just a few minutes of a shaft of light from which this feature of the cathedral derives its name. Two notable bridges secured access to Toledo across the Tajo, the Alcántara bridge and the later built San Martín bridge.</p>
