--- a/app/views/places/_item.html.erb
+++ b/app/views/places/_item.html.erb
@@ -1,7 +1,7 @@
 <%= div_for(place, :class =>"item-object minimized ui-corner-all") do %>
   <div class="picture">
     <% if place.main_picture %>
-      <%= link_to thumb_for(place.main_picture, '540x220'), place %>
+      <%= link_to thumb_for(place.main_picture, '500'), place %>
     <% else %>
       <%= link_to image_tag("ico/places_icon.jpg"), place %>
     <% end %>
