--- a/app/views/guides/_item.html.erb
+++ b/app/views/guides/_item.html.erb
@@ -1,6 +1,6 @@
 <%= div_for(guide, :class =>"item-object minimized ui-corner-all") do %>
   <div class="picture">
-    <%= link_to thumb_for(guide.main_picture, '540x220'), guide %>
+    <%= link_to thumb_for(guide.main_picture, '500'), guide %>
     <div class="actions">
       <a href="#" class="button-resizable" class="ui-state-default ui-corner-all"></a>
       
