--- a/app/assets/stylesheets/city/binakuru/headers.css.sass
+++ b/app/assets/stylesheets/city/binakuru/headers.css.sass
@@ -10,12 +10,14 @@
 				margin-left: 0px
 				padding: 13px 6px 0px 0px
 			.logo
-				margin-top: 5px
+				z-index: 5
+				position: absolute
 				display: inline-block
 				float: left
 				img
-					width: 75px
-					margin-right: 20px
+					width: 190px
+					height: auto
+					
 			.user-nav
 				height: 30px
 				margin-top: 6px
@@ -38,14 +40,15 @@
 					font-weight: normal
 			.logpover
 				display: inline-block
-				margin-top: 11px
+				margin-top: 18px
+				margin-left: 210px
 			.navregister
 				margin-left: 20px	
 			.asistfloat	
 				float: right	
 				width: 35%
 				.search-nav
-					margin-right: 40px
+					margin-left: 70px
 					display: inline-block
 					.search-query
 						border: 0px solid #ffffff
