--- a/app/views/layouts/_header_signed_in.erb
+++ b/app/views/layouts/_header_signed_in.erb
@@ -6,8 +6,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to(image_tag('barco_blanco.png', :alt => t('site.name')), root_path, class: 'logo') %>
-      <a href="/home "class="brand">binakuru</a>
+      <%= link_to(image_tag('logos-11.png', :alt => t('site.name')), root_path, class: 'logo') %>
+      
       
       
       <div class="nav-collapse collapse">
