--- a/app/views/routes/_item.html.erb
+++ b/app/views/routes/_item.html.erb
@@ -1,5 +1,5 @@
 <%= div_for(route, :class =>"item-object minimized ui-corner-all") do %>
-  <!-- <div class="picture">
+  <div class="picture">
     <%= link_to thumb_for(route.main_picture, '500'), route %>
     <div class="actions">
       <a href="#" class="button-resizable" class="ui-state-default ui-corner-all"></a>
