calendar to trips and prg changes

--- a/app/views/routes/_info.html.erb
+++ b/app/views/routes/_info.html.erb
@@ -1,6 +1,6 @@
 <div class="details">
   <h4>This is a guide from <%= @route.trip.title %> trip</h4>
-  <div class="info">
+  <!-- <div class="info">
     <div class="cover">
       <%= image_tag('ninja.jpeg') %>
     </div>
@@ -15,6 +15,6 @@
       <%= render :partial => 'comments/new', :locals => { :activity => @route.post_activity } %>
     </div>
     <%= render :partial => 'activities/comments', :locals => { :activity => @route.post_activity } %>
-  </div>
+  </div> -->
 </div>
 
