--- a/app/assets/stylesheets/city/binakuru/places.css.sass
+++ b/app/assets/stylesheets/city/binakuru/places.css.sass
@@ -10,11 +10,13 @@
     width: 71% 
     height: 335px
     position: relative
+
     .info_photo
       display: block
       z-index: 1
       position: absolute
       width: 100%
+      background-color: white
     .map 
       z-index: 0
       position: absolute
@@ -105,7 +107,7 @@
   background-color: white
   margin-bottom: 24px
   padding-bottom: 10px
-  margin-top: 25px
+
   h2
     @include title
     margin-top: 20px
@@ -129,7 +131,7 @@
 .related
   width: 29%
   float: right
-  margin-top: -9px
+  margin-top: -17px
   p 
     @include section
     text-align: center
@@ -161,7 +163,7 @@
       margin-left: 9%
       width: 87%
     .highlight_events
-      
+
        
 
 .change_mode
