--- a/app/assets/stylesheets/city/binakuru/plannings.css.sass
+++ b/app/assets/stylesheets/city/binakuru/plannings.css.sass
@@ -103,3 +103,8 @@
       img 
         width: 100%
         height: 85px
+#prg_small
+  .thumbnails 
+    li
+      margin-bottom: 0
+      margin-top: 5px
