--- a/app/assets/stylesheets/city/binakuru/headers.css.sass
+++ b/app/assets/stylesheets/city/binakuru/headers.css.sass
@@ -19,6 +19,7 @@
 					height: auto
 					
 			.user-nav
+				margin-left: 250px
 				height: 30px
 				margin-top: 6px
 				margin-bottom: 3px
@@ -48,11 +49,12 @@
 				float: right	
 				width: 35%
 				.search-nav
-					margin-left: 70px
+					
 					display: inline-block
 					.search-query
 						border: 0px solid #ffffff
 				.dropdown
+					float: right
 					display: inline-block
 					vertical-align: top
 					margin-top: 11px
