--- a/app/views/guides/_info.html.erb
+++ b/app/views/guides/_info.html.erb
@@ -1,6 +1,6 @@
 <div class="details">
   <h4>This is a guide from <%= @guide.trip.title %> trip</h4>
-  <div class="info">
+  <!--div class="info">
     <div class="cover">
       <%= thumb_for(@guide.main_picture, '500') %>
     </div>
@@ -17,5 +17,5 @@
       <%= render :partial => 'comments/new', :locals => { :activity => @guide.post_activity } %>
     </div>
     <%= render :partial => 'activities/comments', :locals => { :activity => @guide.post_activity } %>
-  </div>
+  </div-->
 </div>
