--- a/app/assets/stylesheets/city/binakuru/places.css.sass
+++ b/app/assets/stylesheets/city/binakuru/places.css.sass
@@ -83,23 +83,27 @@
       padding-left: 32px
       padding-bottom: 10px
     .title_route
-      p
-        font-size: 44px
-        padding-top: 17px
+   
+        
+ 
     .title_place
-      p 
-        padding-top: 50px
+ 
+
     .title_prg
       background-color: #0DA592
-      border-radius: 100px 100px 100px 100px
+      border-radius: 100px 
       height: 200px
       margin-left: auto
       margin-right: auto
       margin-top: 20px
       text-align: center
-      line-height: 50px
+
       width: 200px
-      @include cityName
+      p.titlecentral
+        @include cityName
+
+
+
 
         
 .PRG_description
@@ -144,14 +148,15 @@
     padding-bottom: 13px
     ul 
       margin-left: 10%
-      li 
+      li
         display: inline-block
-        margin-right: 8%
-        margin-top: 6%
-        img
-          max-width: 100px
-          height: auto
-          opacity: 0.8
+        .photos
+          margin-right: 8%
+          margin-top: 6%
+          img
+            max-width: 100px
+            height: auto
+            opacity: 0.8
   .related_events
     padding-bottom: 2%
     padding-top: 2%
