--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -18,7 +18,7 @@
     <%#= place_timeline_thumb(@place) %>
         <div class="PRG_information">
           <div class="btn-add"></div>
-          <div class="title_prg title_place">
+          <div class="title_prg title_place valign">
             <p class="titlecentral"><%= @place.title %></p>
           </div>
             <div class="prg_stars">
