--- a/app/views/routes/_carousel.html.erb
+++ b/app/views/routes/_carousel.html.erb
@@ -1,4 +1,4 @@
-<% photos = @route.places.first.photos %>
+<% photos = @route.photos %>
 <% unless photos.empty? %>
   <% if photos.length == 1 %>
    <!-- Just one photo -->
