--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -61,13 +61,14 @@
       </div>
       <p>related photos</p>
       <div class="related_photos related_all">
+        <% related = @route.photos.sample(4) %>
         <ul>
-          <li><%= image_tag('panoramica_toledo.jpg') %></li>
-          <li><%= image_tag('panoramica_toledo.jpg') %></li>
+          <li><%= thumb_for(related[0], 'thumb100sq') %></li>
+          <li><%= thumb_for(related[1], 'thumb100sq') %></li>
         </ul>
         <ul>
-          <li><%= image_tag('panoramica_toledo.jpg') %></li>
-          <li><%= image_tag('panoramica_toledo.jpg') %></li>
+          <li><%= thumb_for(related[2], 'thumb100sq') %></li>
+          <li><%= thumb_for(related[3], 'thumb100sq') %></li>
         </ul>
       </div>
       <p>related videos</p>
