--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -76,16 +76,15 @@
 @import "city/binakuru/toolbar"
 @import "city/binakuru/fonts"
 @import "city/binakuru/headers"
+
+@import "city/binakuru/wallinput"
 @import "city/binakuru/timeline"
-@import "city/binakuru/profile"
-@import "city/binakuru/items"
 @import "city/binakuru/comments"
 
+@import "city/binakuru/profile"
+@import "city/binakuru/items"
 @import "city/binakuru/filter"
-
 @import "city/binakuru/front"
-
-
 @import "city/binakuru/contacts"
 
 
