--- a/app/assets/stylesheets/city/binakuru/toolbar.css.sass
+++ b/app/assets/stylesheets/city/binakuru/toolbar.css.sass
@@ -3,7 +3,7 @@
   @include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
   height: 102px
   
-#toolbar_profile
+.toolbar_profile
   .toolbar_content
     ul
       margin: 0
