--- a/app/assets/stylesheets/city/binakuru/places.css.sass
+++ b/app/assets/stylesheets/city/binakuru/places.css.sass
@@ -97,10 +97,15 @@
       margin-right: auto
       margin-top: 20px
       text-align: center
+      display: table
 
       width: 200px
       p.titlecentral
         @include cityName
+        text-align: center
+        vertical-align: middle
+        display: table-cell
+        line-height: 40px
 
 
 
@@ -150,6 +155,7 @@
       margin-left: 10%
       li
         display: inline-block
+        width: 100px
         .photos
           margin-right: 8%
           margin-top: 6%
