--- a/app/views/places/_item.html.erb
+++ b/app/views/places/_item.html.erb
@@ -3,7 +3,7 @@
     <% if place.main_picture %>
       <%= link_to thumb_for(place.main_picture, '500'), place %>
     <% else %>
-      <%= link_to image_tag("ico/places_icon.jpg"), place %>
+      <%= link_to image_tag("ico/places_icon.png"), place %>
     <% end %>
     <div class="actions">
       <a href="#" class="button-resizable" class="ui-state-default ui-corner-all"></a>
