--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -1,4 +1,4 @@
-<% toolbar :home %>
+<!--% toolbar :home %-->
 <% content_for :title do %>
   <%= t('site.name')  + ": " + t('place.title') %>
 <% end %>
