--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -47,13 +47,14 @@
       </div>
       <p>related photos</p>
       <div class="related_photos related_all">
+        <% related = @route.photos.sample(4) %>
         <ul>
-          <li><%= image_tag('panoramica_toledo.jpg') %></li>
-          <li><%= image_tag('panoramica_toledo.jpg') %></li>
+          <li><%= thumb_for(related[0], 'thumb100sq') %></li>
+          <li><%= thumb_for(related[1], 'thumb100sq') %></li>
         </ul>
         <ul>
-          <li><%= image_tag('panoramica_toledo.jpg') %></li>
-          <li><%= image_tag('panoramica_toledo.jpg') %></li>
+          <li><%= thumb_for(related[2], 'thumb100sq') %></li>
+          <li><%= thumb_for(related[3], 'thumb100sq') %></li>
         </ul>
       </div>
       <p>related videos</p>
@@ -71,8 +72,8 @@
           <%= render :partial => 'comments/new', :locals => { :activity => @place.post_activity } %>
         </div>
       </div>
-        <%= render :partial => 'activities/comments', :locals => { :activity => Trip.first.post_activity } %>
-        <%= render :partial => 'activities/comments', :locals => { :activity => @place.post_activity } %>
+        <!--%= render :partial => 'activities/comments', :locals => { :activity => Trip.first.post_activity } %>
+        <%= render :partial => 'activities/comments', :locals => { :activity => @place.post_activity } %> -->
     </div>
 <% end %>
 
