--- a/app/views/toolbar/_profile.html.erb
+++ b/app/views/toolbar/_profile.html.erb
@@ -57,7 +57,7 @@
 
       </li>
       <li class="info_profile">    
-        <div class="toolbar_front">
+        <div class="toolbar_front profile">
           <ul>
             <li>
               <a href="">name</a>      
