map_mode font color

--- a/app/assets/stylesheets/city/binakuru/mixins.css.sass
+++ b/app/assets/stylesheets/city/binakuru/mixins.css.sass
@@ -41,7 +41,7 @@
 @mixin mapMode
   font-family: $Lato
   font-size: 16px
-  color: $color1
+  color: white
 @mixin dates_filter
   font-family: $LatoItalic
   font-size: 16px
