--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -47,14 +47,13 @@
       </div>
       <p>related photos</p>
       <div class="related_photos related_all">
-        <% related = @route.photos.sample(4) %>
         <ul>
-          <li><%= thumb_for(related[0], 'thumb100sq') %></li>
-          <li><%= thumb_for(related[1], 'thumb100sq') %></li>
+          <li><%= image_tag('panoramica_toledo.jpg') %></li>
+          <li><%= image_tag('panoramica_toledo.jpg') %></li>
         </ul>
         <ul>
-          <li><%= thumb_for(related[2], 'thumb100sq') %></li>
-          <li><%= thumb_for(related[3], 'thumb100sq') %></li>
+          <li><%= image_tag('panoramica_toledo.jpg') %></li>
+          <li><%= image_tag('panoramica_toledo.jpg') %></li>
         </ul>
       </div>
       <p>related videos</p>
@@ -73,7 +72,7 @@
         </div>
       </div>
         <!--%= render :partial => 'activities/comments', :locals => { :activity => Trip.first.post_activity } %>
-        <%= render :partial => 'activities/comments', :locals => { :activity => @place.post_activity } %> -->
+        <%= render :partial => 'activities/comments', :locals => { :activity => @place.post_activity } %>-->
     </div>
 <% end %>
 
