changes in logo, variable color and prg

--- a/app/assets/stylesheets/city/binakuru/items.css.sass
+++ b/app/assets/stylesheets/city/binakuru/items.css.sass
@@ -64,7 +64,7 @@
           height: 20px
 
   a.title
-    background: none repeat scroll 0 0 rgba(192, 115, 19, 0.85)
+    background: none repeat scroll 0 0 $color2_rgb
     height: 26px
     width: 100%
     text-align: center
