--- a/app/assets/stylesheets/city/binakuru/places.css.sass
+++ b/app/assets/stylesheets/city/binakuru/places.css.sass
@@ -28,8 +28,11 @@
     float: right
     background-color: white
     .btn-add
-      margin: 10px
+      margin-left: 20%
+      margin-top: 10px
       float: right
+      z-index: 1
+      position: absolute
     .prg_stars
       margin-top: 25px 
       margin-left: auto
@@ -93,7 +96,7 @@
       background-color: #0DA592
       border-radius: 100px 
       height: 200px
-      margin-left: auto
+      margin-left: 15%
       margin-right: auto
       margin-top: 20px
       text-align: center
@@ -106,6 +109,7 @@
         vertical-align: middle
         display: table-cell
         line-height: 40px
+        padding: 10px
 
 
 
@@ -150,12 +154,14 @@
     height: auto
     width: 100%
   .related_photos
-    padding-bottom: 13px
+    padding-bottom: 10px
     ul 
-      margin-left: 10%
+      margin-left: 11%
       li
         display: inline-block
         width: 100px
+        margin-top: 6%
+        margin-right: 8%
         .photos
           margin-right: 8%
           margin-top: 6%
@@ -174,6 +180,14 @@
       margin-left: 9%
       width: 87%
     .highlight_events
+
+  .related_videos
+    padding-bottom: 2%
+    padding-top: 2%
+    height: 200px
+    width: 100%
+    background-color: white
+
 
        
 
