--- a/app/assets/stylesheets/city/binakuru/toolbar.css.sass
+++ b/app/assets/stylesheets/city/binakuru/toolbar.css.sass
@@ -52,7 +52,10 @@
                 color: white
                 font-size: 14px
                 text-align: left
+        .profile
+          opacity: 0.54
 
+          
         .toolbar_back
           z-index: 0
           position: absolute
