--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -19,8 +19,8 @@
     <%#= place_timeline_thumb(@place) %>
         <div class="PRG_information">
           <div class="btn-add"></div>
-          <div class="title_prg title_route vAling">
-            <div><p class="titlecentral"><%= @route.title %></p></div>
+          <div class="title_prg title_place">
+            <p class="titlecentral"><%= @route.title %></p>
           </div>
             <div class="prg_stars">
               <ul>
