--- a/app/assets/stylesheets/city/binakuru/headers.css.sass
+++ b/app/assets/stylesheets/city/binakuru/headers.css.sass
@@ -14,8 +14,9 @@
 				position: absolute
 				display: inline-block
 				float: left
+				margin-left: -3px
 				img
-					width: 190px
+					width: 138px
 					height: auto
 					
 			.user-nav
