--- a/app/assets/stylesheets/city/binakuru/variables.scss
+++ b/app/assets/stylesheets/city/binakuru/variables.scss
@@ -1,9 +1,10 @@
 // colors
 // -------------------------
 $color1: 									#0da592;
-$color2: 									#c07313;
+$color2: 									rgba(192, 115, 19, 1);
 $color3:									#20170d;
 $bodyBackground:          #f9f9f9;
+$color2_rgb:              rgba(192, 115, 19, 0.85);
 
 
 // typography
