--- a/app/views/frontpage/_map_frontpage.html.erb
+++ b/app/views/frontpage/_map_frontpage.html.erb
@@ -17,7 +17,7 @@
     </div>
     <div class="search-inspire">
 
-      <p class="front-text">where do you whatn to go?</p>
+      <p class="front-text">where do you want to go?</p>
       1
       <input id="q" class="search-query" type="text" placeholder="Buscar" name="q" autocomplete="off">
 
