--- a/app/assets/stylesheets/city/binakuru/places.css.sass
+++ b/app/assets/stylesheets/city/binakuru/places.css.sass
@@ -162,13 +162,10 @@
         width: 100px
         margin-top: 6%
         margin-right: 8%
-        .photos
-          margin-right: 8%
-          margin-top: 6%
-          img
-            max-width: 100px
-            height: auto
-            opacity: 0.8
+        img
+          max-width: 100px
+          height: auto
+          opacity: 0.8
   .related_events
     padding-bottom: 2%
     padding-top: 2%
@@ -187,7 +184,25 @@
     height: 200px
     width: 100%
     background-color: white
-
+    ul
+      li 
+        img
+          margin-left: 3%
+          margin-top: 2%
+          position: absolute
+          width: 150px
+          z-index: 0
+          opacity: 0.7
+    .play_icon
+      border-bottom: 10px solid transparent
+      border-left: 20px solid $color1
+      border-top: 10px solid transparent
+      height: 0
+      margin-left: 11%
+      margin-top: 7%
+      position: absolute
+      width: 0
+      z-index: 1
 
        
 
