--- a/app/views/frontpage/index.html.erb
+++ b/app/views/frontpage/index.html.erb
@@ -1,6 +1,7 @@
 <section id="frontpage">
   <%= render :partial => "frontpage/map_frontpage" %>
   <%= render :partial => "frontpage/pois_frontpage" %>
+  <%= render :partial => "frontpage/users_frontpage" %>
 </section>
 
 
