--- a/app/assets/stylesheets/city/binakuru/headers.css.sass
+++ b/app/assets/stylesheets/city/binakuru/headers.css.sass
@@ -13,7 +13,8 @@
 				z-index: 5
 				position: absolute
 				display: inline-block
-				float: left
+				float: right
+
 				img
 					width: 190px
 					height: auto
@@ -58,6 +59,7 @@
 					display: inline-block
 					vertical-align: top
 					margin-top: 11px
+					margin-right: 20px
 					color: #000
 					.dropdown-toggle
 						a
