--- a/app/views/frontpage/_pois_frontpage.html.erb
+++ b/app/views/frontpage/_pois_frontpage.html.erb
@@ -1,15 +1,15 @@
 <div id="interest_points">
-  <button class="btn">view on the map</button>
+  <button class="btn_map">map mode</button>
   <div class="checkbox-menu">
 
     <input type="checkbox" name="check_01" id="checkGuides" checked onchange="javascript:showContentGuides()" />
-    <label for="checkGuides">guides</label>
+    <label for="checkGuides"><p>guides</p></label>
 
     <input type="checkbox" name="check_02" id="checkRoutes" checked onchange="javascript:showContentRoutes()"/>
-    <label for="checkRoutes">routes</label>
+    <label for="checkRoutes"><p>routes</p></label>
 
     <input type="checkbox" name="check_03" id="checkPlaces" checked onchange="javascript:showContentPlaces()" />
-    <label for="checkPlaces">places</label>
+    <label for="checkPlaces"><p>places</p></label>
 
   </div>
 
