--- a/app/views/frontpage/_map_frontpage.html.erb
+++ b/app/views/frontpage/_map_frontpage.html.erb
@@ -18,8 +18,31 @@
     <div class="search-inspire">
 
       <p class="front-text">where do you want to go?</p>
-      1
       <input id="q" class="search-query" type="text" placeholder="Buscar" name="q" autocomplete="off">
+      <!-- <div class="search-nav">
+        <%= form_tag search_path, method: 'get', class: "navbar-search" do %>
+        <%= text_field_tag :q, nil, autocomplete: :off, class: 'search-query', placeholder: t('search.name'), "data-min_query" => SocialStream::Search::MIN_QUERY %>
+        <% end %>
+        <%= javascript_tag do %>
+          $(function() {
+          SocialStream.SearchHeader.show();
+          });
+        <% end %>
+        <div class="mat">
+          <%= render partial: 'layouts/loading' %>
+
+          <div class="query_too_short">
+            <%= t 'search.at_least', count: SocialStream::Search::MIN_QUERY %>
+          </div>
+
+          <div class="no_results">
+            <%= t 'search.nothing' %>
+          </div>
+
+          <div class="results">
+          </div>
+        </div>
+      </div> -->
 
 
     </div>
